@@ -63,6 +63,8 @@ class WeatherMapDataSource_rrd extends WeatherMapDataSource {
 	{
 		$in_ds = "traffic_in";
 		$out_ds = "traffic_out";
+		$dsnames[IN] = "traffic_in";
+		$dsnames[OUT] = "traffic_out";
 		$rrdfile = $targetstring;
 
 		$multiplier = 8;
@@ -76,6 +78,10 @@ class WeatherMapDataSource_rrd extends WeatherMapDataSource {
 			$in_ds = $matches[2];
 			$out_ds = $matches[3];
 			$rrdfile = $matches[1];
+			
+			$dsnames[IN] = $matches[2];
+			$dsnames[OUT] = $matches[3];
+			
 			debug("Special DS names seen ($in_ds and $out_ds).\n");
 		}
 
@@ -95,147 +101,129 @@ class WeatherMapDataSource_rrd extends WeatherMapDataSource {
 		// cacti polling cycle we get run. This ought to stop the 'some lines are grey' problem that some
 		// people were seeing
 
+
+// NEW PLAN - READ LINES (LIKE NOW), *THEN* CHECK IF REQUIRED DS NAMES EXIST (AND FAIL IF NOT),
+//     *THEN* GET THE LAST LINE WHERE THOSE TWO DS ARE VALID, *THEN* DO ANY PROCESSING.
+//  - this allows for early failure, and also tolerance of empty data in other parts of an rrd (like smokeping uptime)
+
 		if(file_exists($rrdfile))
 		{
-			if(1==1)
+			debug ("RRD ReadData: Target DS names are $in_ds and $out_ds\n");
+
+			$period = intval($map->get_hint('rrd_period'));
+			if($period == 0) $period = 800;
+			$start = $map->get_hint('rrd_start');
+			if($start == '') {
+			    $start = "now-$period";
+			    $end = "now";
+			}
+			else
 			{
-				debug ("RRD ReadData: Target DS names are $in_ds and $out_ds\n");
+			    $end = "start+".$period;
+			}
 
-				$period = intval($map->get_hint('rrd_period'));
-				if($period == 0) $period = 800;
-				$start = $map->get_hint('rrd_start');
-				if($start == '') {
-				    $start = "now-$period";
-				    $end = "now";
-				}
-				else
-				{
-				    $end = "start+".$period;
-				}
-
-				if ((1==0) && extension_loaded('RRDTool')) // fetch the values via the RRDtool Extension
-				{
-					// for the php-rrdtool module, we use an array instead...
-					$rrdparams = array("AVERAGE","--start",$start,"--end",$end);
-					$rrdreturn = rrd_fetch ($rrdfile,$rrdparams,count($rrdparams));
-					print_r($rrdreturn);
-					// XXX - figure out what to do with the results here
-				 	$now = $rrdreturn['start'];
-					$n=0;
-					do {
-						$now += $rrdreturn['step'];
-						print "$now - ";
-						for($i=0;$i<$rrdreturn['ds_cnt'];$i++)
-						{
-							print $rrdreturn['ds_namv'][$i] . ' = '.$rrdreturn['data'][$n++]." ";
-						}
-						print "\n";
-					} while($now <= $rrdreturn['end']);
-						
-				}
-				else
-				{
-
-			#		$command = '"'.$map->rrdtool . '" fetch "'.$rrdfile.'" AVERAGE --start '.$start.' --end '.$end;
-					$command=$map->rrdtool . " fetch $rrdfile AVERAGE --start $start --end $end";
-		
-	
-					debug ("RRD ReadData: Running: $command\n");
-					$pipe=popen($command, "r");
+			if ((1==0) && extension_loaded('RRDTool')) // fetch the values via the RRDtool Extension
+			{
+				// for the php-rrdtool module, we use an array instead...
+				$rrdparams = array("AVERAGE","--start",$start,"--end",$end);
+				$rrdreturn = rrd_fetch ($rrdfile,$rrdparams,count($rrdparams));
+				print_r($rrdreturn);
+				// XXX - figure out what to do with the results here
+				$now = $rrdreturn['start'];
+				$n=0;
+				do {
+					$now += $rrdreturn['step'];
+					print "$now - ";
+					for($i=0;$i<$rrdreturn['ds_cnt'];$i++)
+					{
+						print $rrdreturn['ds_namv'][$i] . ' = '.$rrdreturn['data'][$n++]." ";
+					}
+					print "\n";
+				} while($now <= $rrdreturn['end']);
 					
-					$lines=array ();
-					$count = 0;
-					$linecount = 0;
-	
-					if (isset($pipe))
-					{
-						$headings=fgets($pipe, 4096);
-						fgets($pipe, 4096); // skip the blank line
-						$buffer='';
-	
-						while (!feof($pipe))
-						{
-							$line=fgets($pipe, 4096);
-							debug ("> " . $line);
-							$buffer.=$line;
-							$lines[]=$line;
-							$linecount++;
-						}				
-						pclose ($pipe);
-						
-						debug("RRD ReadData: Read $linecount lines from rrdtool\n");
-	
-						$rlines=array_reverse($lines);
-						$gotline=0;
-						$theline='';
-	
-						foreach ($rlines as $line)
-						{
-							debug ("--" . $line . "\n");
-							$cols=preg_split("/\s+/", $line);
-							$dataok=1;
-							$ii=0;
-	
-							foreach ($cols as $col)
-							{
-								# if( ! is_numeric($col) ) { $dataok=0; }
-								if (trim($col) != '' && !preg_match('/^\d+\.?\d*e?[+-]?\d*:?$/i', $col))
-								{
-									$dataok=0;
-									debug ("RRD ReadData: $ii: This isn't a number: [$col]\n");
-								}
-	
-								# if($col=='nan') { $dataok=0; }
-								$ii++;
-							}
-	
-							if ($gotline == 0 && $dataok == 1 && trim($line) != '')
-							{
-								debug ("RRD ReadData: Found a good line: $line ($headings)\n");
-								$theline=$line;
-								$gotline=1;
-								$countwas=$count;
-							}
-	
-							$count++;
-						}
-					}
-					else
-					{
-						warn("RRD ReadData: failed to open pipe to RRDTool: ".$php_errormsg." [WMRRD04]\n");
-					}
-				}
+			}
+			else
+			{
 
-				if ($theline != '')
+		#		$command = '"'.$map->rrdtool . '" fetch "'.$rrdfile.'" AVERAGE --start '.$start.' --end '.$end;
+				$command=$map->rrdtool . " fetch $rrdfile AVERAGE --start $start --end $end";
+	
+
+				debug ("RRD ReadData: Running: $command\n");
+				$pipe=popen($command, "r");
+				
+				$lines=array ();
+				$count = 0;
+				$linecount = 0;
+
+				if (isset($pipe))
 				{
-					if ($countwas > 2) { warn
-						("RRD ReadData: Data is not most recent entry ($countwas) for link: $targetstring [WMRRD05]\n"); }
-
-					debug ("RRD ReadData: Our line is $theline\n");
-					$cols=preg_split("/\s+/", $theline);
+					$headings=fgets($pipe, 4096);
 					// this replace fudges 1.2.x output to look like 1.0.x
 					// then we can treat them both the same.
 					$heads=preg_split("/\s+/", preg_replace("/^\s+/","timestamp ",$headings) );
+				
+					fgets($pipe, 4096); // skip the blank line
+					$buffer='';
 
-					# $values = array_combine($heads,$cols);
-					for ($i=0, $cnt=count($cols); $i < $cnt; $i++) { $values[$heads[$i]] = $cols[$i]; }
-
-					// as long as no-one actually manages to create an RRD with a DS of '-', then this will just fall through to 0 for '-'
-					if( isset($values[$in_ds]) || isset($values[$out_ds]) )
+					while (!feof($pipe))
 					{
-						$inbw=0; $outbw=0;
-						if(isset($values[$in_ds]) ) $inbw=$values[$in_ds] * $multiplier;
-						if(isset($values[$out_ds]) ) $outbw=$values[$out_ds] * $multiplier;
-						$data_time = $values['timestamp'];
-						$data_time = preg_replace("/:/","",$data_time);
+						$line=fgets($pipe, 4096);
+						debug ("> " . $line);
+						$buffer.=$line;
+						$lines[]=$line;
+						$linecount++;
+					}				
+					pclose ($pipe);
+					
+					debug("RRD ReadData: Read $linecount lines from rrdtool\n");
+
+					if( (isset($heads[$in_ds]) || $in_ds == '-') && (isset($heads[$out_ds]) || $out_ds == '-') )
+					{
+					    // deal with the data, starting with the last line of output
+					     $rlines=array_reverse($lines);
+		     
+					     foreach ($rlines as $line)
+					     {
+						 debug ("--" . $line . "\n");
+						 $cols=preg_split("/\s+/", $line);
+						 for ($i=0, $cnt=count($cols); $i < $cnt; $i++) { $values[$heads[$i]] = trim($cols[$i]); }
+		 
+						$data_ok=FALSE;
+		 
+						foreach (array(IN,OUT) as $dir)
+						{
+							$candidate = $values[$dsnames[$dir]];
+							if(preg_match('/^\d+\.?\d*e?[+-]?\d*:?$/i', $candidate))
+							{
+								$data[$dir] = $candidate * $multiplier;
+							}
+							else
+							{
+								$data_ok = TRUE;
+							}
+						}
+						
+						if($data_ok)
+						{
+							// break out of the loop here   
+						}
+					     }
 					}
 					else
 					{
-                                                $names = join(",",$heads);
+					    // report DS name error
+					     $names = join(",",$heads);
 						warn("RRD ReadData: Neither of your DS names ($in_ds & $out_ds) were found, even though there was a valid data line. Maybe they are wrong? Valid DS names in this file are: $names [WMRRD06]");
 					}
+		   
+				}
+				else
+				{
+					warn("RRD ReadData: failed to open pipe to RRDTool: ".$php_errormsg." [WMRRD04]\n");
 				}
 			}
+		
 		}
 		else
 		{
